examples/test/testpolicy4122.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4122
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key41: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value39
          key9: value25
          key21: value14
      podSelector:
        matchLabels:
          key21: value23
